fixed horizontal scrolling

--- a/assets/css/global-styles.css
+++ b/assets/css/global-styles.css
@@ -64,7 +64,6 @@ a {
 
 .full-height-nav {
   min-height: 90vh;
-  padding: 25px;
 }
 
 .full-height-nav-footer {
